fix: overflow-x: hidden

--- a/styles/style_desktop.css
+++ b/styles/style_desktop.css
@@ -4,6 +4,7 @@ body {
     background-image: url(../assets/bg.jpg);
     background-size: 100%;
     background-attachment: fixed;
+    overflow-x: hidden;
 }
 
 ::-webkit-scrollbar {
